--- a/src/components/kpi_formula/KPIUploader.css
+++ b/src/components/kpi_formula/KPIUploader.css
@@ -3,32 +3,34 @@
     display: flex;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #000000;
     overflow-x: hidden;
+    color: #FFFFFF;
 }
 
 .sidebar {
     width: 250px;
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 15px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    color: #FFFFFF;
 }
 
 .content {
     flex-grow: 1;
     margin-left: 320px;
     padding: 20px;
-    background-color: #f9f9f9;
-    height: 100vh;
+    background-color: #000000;
+    color: #FFFFFF;
 }
 
 .body {
-    background-color: #F5F5F5;
-    color: #000000;
+    background-color: #000000;
+    color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -49,6 +51,7 @@ h3 {
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    color: #000000;
 }
 
 .kpi-selection-card {
@@ -57,6 +60,7 @@ h3 {
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #000000;
 }
 
 file-upload-container {
@@ -206,6 +210,7 @@ button {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+    color: #000000;
 }
 
 .csv-table th {
@@ -284,28 +289,7 @@ button {
     flex-direction: row;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: #0a0a0a;
     padding: 20px;
     box-sizing: border-box;
-}
-
-.kpi-formula-sidebar, .kpi-formula-content {
-    background-color: #fff;
-    color: #000;
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
-}
-
-.kpi-formula-sidebar {
-    width: 250px;
-    background-color: #FFFFFF;
-    padding: 15px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    overflow-y: auto;
-    display: block;
-}
-
-.kpi-formula-content {
-    flex-grow: 1;
 }
