Remove old components and add new performance code

--- a/performance/frontend/src/App.css
+++ b/performance/frontend/src/App.css
@@ -1,19 +1,19 @@
-.Performance {
+.App {
   text-align: center;
 }
 
-.Performance-logo {
+.App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .Performance-logo {
-    animation: Performance-logo-spin infinite 20s linear;
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.Performance-header {
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,11 +24,11 @@
   color: white;
 }
 
-.Performance-link {
+.App-link {
   color: #61dafb;
 }
 
-@keyframes Performance-logo-spin {
+@keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
